2008-05-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/keyfile.c, src/filetypes.c, src/filetypes.h:
   Store filetype::name instead of unique ID when saving sessions.
   Remove all filetype UID code.
 * src/filetypes.c, src/filetypes.h:
   Add filetypes_find() that calls a predicate function for each
   filetype in filetypes_hash until TRUE is returned.
   Make filetypes_detect_from_extension() work for all filetypes
   in filetypes_hash.
 * src/filetypes.c:
   Add filetypes_new() to create and initialize a new filetype.
 * src/filetypes.c, src/filetypes.h:
   Remove filetypes_find(), which will be replaced with a dynamic array
   of filetype pointers (more flexible and backwards compatible with
   existing code).
 * src/plugindata.h, src/filetypes.c, src/filetypes.h, src/plugins.c:
   Add filetypes_array to GeanyData for plugins to access a dynamic
   array of filetype pointers.


2008-04-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keyfile.c, src/keyfile.h, src/main.c:
   Refactor open_session_file() from configuration_open_files().
 * src/keyfile.c:
   Refactor get_session_file_string() from
   configuration_save_session_files().


2008-04-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/filetypes.c, src/filetypes.h, src/plugins.c,
   plugins/vcdiff.c:
   Remove filetypes array from API.
   Replace filetypes_get_from_uid() with filetypes_lookup_by_name().
   Use a hash table for filetypes, but keep the old filetypes array
   available for now.
 * src/filetypes.c, src/filetypes.h:
   Add GEANY_MAX_BUILT_IN_FILETYPES for accessing built_in_filetypes[].
 * src/filetypes.c:
   Refactor create_set_filetype_menu() from filetypes_init().


2008-04-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in, tagmanager/lregex.c, tagmanager/include/regex.h,
   tagmanager/regex.c,tagmanager/include/Makefile.am,